<resources>
    <string name="app_name">ExamEdge</string>
    <string name="start_quiz">START TEST</string>
    <string name="bookmarks">BOOKMARKS</string>
    <string name="sets">SETS</string>
    <string name="done">DONE</string>
    <string name="loading">Loading...</string>
    <string name="share">SHARE</string>
    <string name="bannerID">ca-app-pub-3940256099942544/6300978111</string>
</resources>